<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Open Psychic</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="signUp">SignUp</string>
    <string name="register_open_psychic">Register Open Psychic Advisor</string>
    <string name="navigation_explore" translatable="false">Explore</string>
    <string name="navigation_dreams" translatable="false">Dreams</string>
    <string name="navigation_request" translatable="false">History</string>
    <string name="navigation_profile" translatable="false">Profile</string>
    <string name="home_activity_label">Home Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="category_ghost">Past Lives</string>
    <string name="category_dream">Dream Interpretations</string>
    <string name="category_heart">Love &amp; Relationships</string>
    <string name="category_magic_ball">Fortune Telling</string>
    <string name="category_palm">Palm Readings</string>
    <string name="category_saturn">Astrology</string>
    <string name="category_spirit">Lingering Spirits</string>
    <string name="category_tarot_card">Tarot Readings</string>
    <string name="category_turban">General Readings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="promo_card_text">Psychics Are Good For Your Health</string>
    <string name="select_category">Select Category</string>
    <string name="select_country">Select Country</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="msg_token_fmt">Token: %s</string>
</resources>