<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16041E"
    tools:context=".fragments.home.ExploreFragment"

    >


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_explore_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/explore"
                android:textColor="#DB8FFF"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/home_card_background_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/backdrop"
                    tools:srcCompat="@drawable/backdrop" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/promo_card_text"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/home_explore_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/categories"
                android:textColor="#DB8FFF"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/home_category0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_spirit" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:text="@string/category_spirit"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_tarot_card" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_tarot_card"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_turban" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_turban"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/home_category3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_magic_ball" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:text="@string/category_magic_ball"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_palm" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_palm"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_saturn" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_saturn"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/home_category6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_dream" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:text="@string/category_dream"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_ghost" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_ghost"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:padding="16dp"
                            app:srcCompat="@drawable/category_icon_heart" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_heart"
                            android:textAlignment="center"
                            android:textColor="@color/op_gold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>